--- a/index.html
+++ b/index.html
@@ -392,6 +392,16 @@
                     </div>
                 </div>
             </footer>
+            <div class="modal">
+                <div class="container">
+                    <div class="modal__content">
+                        <div class="modal__icon"><img src="img/modal/001.png" alt="Иконка"></div>
+                        <div class="modal__title">Your message was sent</div>
+                        <div class="modal__text">We will e-mail you when PlugSpot is available for download. Thank you!</div>
+                        <button class="modal__btn btn">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
